# file-process-tracker

./: .dockerignore  .env.example  .env.nas.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  package.sh  pyproject.toml  run.sh
config/: config.yaml
src/: __init__.py  config_loader.py  database.py  file_processor.py  logger.py
tests/: __init__.py  test_file_tracker.py
