[project]
name = "file-process-tracker"
version = "0.1.0"
description = "File processing tracking and management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0.1",
    "click>=8.1.7",
    "python-dotenv>=1.0.0",
    "xxhash>=3.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
